objects/Policy_Document_On_Certificate__c.object
<CustomObject>
    <description>Policy Document records on Certificate</description>
    <fields>
        <fullName>Associated_Trust_Bits__c</fullName>
        <label>Associated Trust Bits</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Server Authentication</fullName>
                </value>
                <value>
                    <fullName>Client Authentication</fullName>
                </value>
                <value>
                    <fullName>Code Signing</fullName>
                </value>
                <value>
                    <fullName>Document Signing</fullName>
                </value>
                <value>
                    <fullName>Encrypting File System</fullName>
                </value>
                <value>
                    <fullName>Secure Email</fullName>
                </value>
                <value>
                    <fullName>Time Stamping</fullName>
                </value>
                <value>
                    <fullName>IP Security End System</fullName>
                </value>
                <value>
                    <fullName>IP Security IKE Intermediate</fullName>
                </value>
                <value>
                    <fullName>IP Security Tunnel Termination</fullName>
                </value>
                <value>
                    <fullName>IP Security User</fullName>
                </value>
                <value>
                    <fullName>OCSP Signing</fullName>
                </value>
                <value>
                    <fullName>Private Key Archival</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_Last_Updated_Date__c</fullName>
        <inlineHelpText>Policy document Last Updated Date must be filled for policy document link</inlineHelpText>
        <label>Document Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Link__c</fullName>
        <inlineHelpText>URL to policy documentation specific to the listed root certs. Documents may be attached to Bugzilla Bugs as described here https://www.ccadb.org/cas/fields#uploading-documents.</inlineHelpText>
        <label>Document Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>CPS</fullName>
                </value>
                <value>
                    <fullName>CP/CPS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark when the record is deleted</inlineHelpText>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Policy_Doc_Id_18_digit__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Policy Doc Id (18 digit)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Doc_On_Cert_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Policy Doc (On Cert) External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Document_On_Case_18_digit__c</fullName>
        <formula>CASESAFEID( Sync_Policy_Doc_Id__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Policy Document On Case (18 digit)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Identifiers__c</fullName>
        <inlineHelpText>Policy Identifiers</inlineHelpText>
        <label>Policy Identifiers</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sync_Policy_Doc_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Policy Document (On Case)</label>
        <referenceTo>Policy_Document_On_Case__c</referenceTo>
        <relationshipLabel>Policy Documents</relationshipLabel>
        <relationshipName>Policy_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Policy Document</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Policy Doc Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>